--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -877,6 +877,7 @@ The 1d column gives the number of real supercharges.
 \paragraph{For \(16\) supercharges}, there is only the vector.
 
 \paragraph{For \(8\) supercharges}, vector and hyper; in 2d $\Nsusy=(4,4)$ also twisted hyper.
+% todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\theta}F(\Phi)$
 
 \paragraph{For \(4\) supercharges}, vector, chiral, linear multiplets; in 2d $\Nsusy=(2,2)$ also twisted chirals, semichirals, \ldots{}
 
@@ -896,9 +897,12 @@ The 1d column gives the number of real supercharges.
 \paragraph{Super Yang--Mills (SYM).} A gauge group is a compact reductive Lie group~$G$ such as $(\Lie{SU}(3)\times\Lie{SU}(2)\times\Lie{U}(1))/\ZZ_6$.
 The SYM term is $\mathcal{L}_{\text{SYM}}=g^{-2}\Tr F\wedge\star F+\text{superpartners}$, with one real gauge coupling~$g$ per simple factor.
 
-\paragraph{Theta term} in even dimension: $\theta\Tr F^{\wedge(d/2)}$ with periodic~$\theta$.
+\paragraph{Theta term} in even dimension: $\theta\Tr F^{\wedge(d/2)}$ with~$\theta$ periodic.
+In 4d, $\theta$ and $g$ combine to $\tau=\theta/(2\pi)+4\pi i/g^2$.
 
 \paragraph{Chern--Simons term} in 3d: $k\Tr\bigl(A\wedge\dd{A}+\frac{2}{3}A\wedge A\wedge A\bigr)$ with $k$~quantized (normalization missing).
+
+% \paragraph{FI parameter.} Real for 4d $\Nsusy=1$ or 2d $\Nsusy=(2,2)$.  Triplet for 2d $\Nsusy=(4,4)$, breaks $\Lie{SU}(2)_R$.
 
 \paragraph{Matter.} For $16$~supercharges, none.
 For $8$~supercharges, symplectic representation $V\simeq\HH^n$ namely $G\to\Lie{USp}(2n)$.
