--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -195,6 +195,8 @@
 \renewcommand{\Im}{}\renewcommand{\Re}{}\let\Im\relax\let\Re\relax
 \DeclareMathOperator{\Im}{Im}
 \DeclareMathOperator{\Re}{Re}
+\DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\Weyl}{Weyl}
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\Tr}{Tr}
 \DeclareMathOperator{\plexp}{plexp}
@@ -210,7 +212,7 @@
 \newcommand{\Lie}[1]{
   \mathrm {
     \clist_if_in:nnF
-      { GL , PGL , SL , PSL , SO , PSO , SU , PSU , U , PU , O , PO , Sp , PSp , USp , PUSp , OSp , POSp , Spin , PSpin , Pin, P , PS , A , B , C , D , E , F , G , Q , UQ , W , S , \tilde S , \tilde{S} , H }
+      { GL , PGL , SL , PSL , SO , PSO , SU , PSU , U , PU , O , PO , Sp , PSp , USp , PUSp , OSp , POSp , Spin , PSpin , Pin, P , PS , A , B , C , D , E , F , G , Q , UQ , W , S , \tilde S , \tilde{S} , H , T }
       {#1} { \UnknownLie }
     #1
   }
@@ -874,16 +876,18 @@ The 1d column gives the number of real supercharges.
 
 \subsection{Spin \(\leq 1\) supermultiplets}
 
-\paragraph{For \(16\) supercharges}, there is only the vector.
+\paragraph{For \(16\) supercharges}, there is only the vector multiplet.
 
-\paragraph{For \(8\) supercharges}, vector and hyper; in 2d $\Nsusy=(4,4)$ also twisted hyper.
+\paragraph{For \(8\) supercharges}, vector multiplet and hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
 % todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\theta}F(\Phi)$
 
-\paragraph{For \(4\) supercharges}, vector, chiral, linear multiplets; in 2d $\Nsusy=(2,2)$ also twisted chirals, semichirals, \ldots{}
+\paragraph{For \(4\) supercharges}, vector, chiral, linear multiplets; in 2d $\Nsusy=(2,2)$ also twisted vector, twisted chirals, semichirals, \ldots{}
 
 \paragraph{For \(2\) supercharges}, vector, chiral, linear, Fermi, \ldots{}
 
 \subsection{Other supermultiplets}
+
+6d $\Nsusy=(2,0)$ tensor multiplet with self-dual two-form gauge field~$B$ (namely $\dd{B}=\star\dd{B}$), four spinors, five scalars.
 
 6d $\Nsusy=(1,0)$ tensor multiplet (contains one scalar), reduces to 4d $\Nsusy=2$ vector.
 
@@ -892,7 +896,7 @@ The 1d column gives the number of real supercharges.
 
 \section{Supersymmetric gauge theories}
 
-\subsection{Data for Lagrangians}
+\subsection{Generalities}
 
 \paragraph{Super Yang--Mills (SYM).} A gauge group is a compact reductive Lie group~$G$ such as $(\Lie{SU}(3)\times\Lie{SU}(2)\times\Lie{U}(1))/\ZZ_6$.
 The SYM term is $\mathcal{L}_{\text{SYM}}=g^{-2}\Tr F\wedge\star F+\text{superpartners}$, with one real gauge coupling~$g$ per simple factor.
@@ -914,6 +918,13 @@ Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 \paragraph{R-symmetry mixing.}
 When it is abelian, the IR R-symmetry (that is part of the superconformal algebra) can be a mixture of the UV R-symmetry with abelian flavour symmetries.
 This is fixed in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization, assuming no accidental flavour symmetries.
+
+\paragraph{Classical vacua:} Coulomb, Higgs and mixed branches.
+Coulomb branch ($\lie{g}$~modulo conjugation by~$G$) parametrized by vector multiplet scalars, can be lifted by quantum effects, larger in 3d due to monopoles.
+For $4$~supercharges, Higgs branch parametrized by chiral multiplet scalars: K\"ahler quotient $R//G$.
+For $8$~supercharges, Higgs branch parametrized by hypermultiplet scalars: hyper-K\"ahler quotient $\widetilde{R}///G$.
+The Higgs branch has flavour symmetry $C(G)/Z(G)$ commutant of $G$ in $U(R)$ or $USp(\widetilde{R})$ modulo center of~$G$.
+Background vector multiplet scalars (real/twisted masses) reduce the Higgs and mixed branches to fixed points of corresponding flavour symmetries.
 
 \subsection{Maximal super Yang--Mills}
 
@@ -960,7 +971,9 @@ Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 
 
 \paragraph{4d \(\Nsusy=2\) \((G,G')\) Argyres--Douglas theories} (with $G$ and~$G'$ among $\Lie{A}_k$, $\Lie{D}_k$, $\Lie{E}_{6,7,8}$) are engineered as IIB strings on three-fold singularity $f_G(x_1,x_2)+f_{G'}(x_3,x_4)=0$ where $f_{A_k}(x,y)=x^2+y^{k+1}$ \etc{} (see \autopageref{page:ADE-polynomial}).
 
-\paragraph{3d \(\Nsusy=4\)}
+\paragraph{3d \(\Nsusy=4\)} has $\Lie{SU}(2)_C\times\Lie{SU}(2)_H$ R-symmetry acting on the Coulomb and Higgs branch.  Both branches are hyper-K\"ahler and the $\Lie{SU}(2)$ rotates their $\CP^1$ worth of complex structures.  Denote $\Lie{T}\subset\Lie{G}$ the Cartan torus.  The Coulomb branch is a holomorphic Lagrangian fibration $\mathcal{M}_C\to\lie{t}_{\CC}/\Weyl$ with generic fiber $\Lie{T}_{\CC}^{\vee}\simeq(\CC^*)^{\rank\Lie{G}}$.  Its classical $\Hom(\pi_1(\Lie{G}),\Lie{U}(1))$ topological flavour symmetry can be enhanced quantum mechanically.
+
+% todo: What is the $\Lie{SU}(2)$ R-symmetry of mixed branches?
 
 \paragraph{2d \(\Nsusy=(4,4)\) gauge theories.}
 Typically get in the IR a direct sum of 2d $\Nsusy=(4,4)$ SCFTs (from the Coulomb and Higgs branches) whose central charges are different.
