Clarify implications between hyperKähler, Calabi-Yau, Kähler

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1276,9 +1276,9 @@ $\Lie{SO}(n)$
 % todo: more at https://en.wikipedia.org/wiki/Holonomy
 % todo: perhaps http://projecteuclid.org/euclid.jdg/1090351387 interesting?
 %
-Note that $\Lie{U}(m)\supset\Lie{SU}(m)\supset\Lie{USp}(m)$ implies that
-all hyperK\"ahler manifolds are Calabi--Yau and thus K\"ahler.
-In general, quaternionic-K\"ahler manifolds are not K\"ahler.
+Note that hyperK\"ahler $\implies$ Calabi--Yau $\implies$ K\"ahler since
+$\Lie{USp}(m)\subset\Lie{SU}(m)\subset\Lie{U}(m)$.
+In contrast, quaternionic-K\"ahler manifolds are not K\"ahler.
 
 % todo:
 % A $\Lie{G}_2$-manifold is a $7$-dimensional manifold with a
