Mention little string theory

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1090,6 +1090,10 @@ where $x\in\RR^{p,1}$ and $y\in\RR^{10-p}$.  In the near horizon $y\to 0$ these 
 
 \paragraph{Branes} IIA strings: D0, F1 (strings), D2, D4, O4$^{\pm}$, $\widetilde{\mathrm{O4}}^+$, NS5, D6, D8 (wall), O8 (wall), \etc{}.  IIB strings: D$(-1)$, F1 (strings), D1, D3, $(p,q)$ 5-branes (includes D5 and NS5), O5$^{\pm}$, $\widetilde{\mathrm{O5}}^+$, D7, O7$^{\pm}$, ON$^0$, \etc{}.  M-theory: M2, M5, OM5, M9.
 
+\paragraph{Little string theory (LST)}
+Decoupled $g_s\to 0$, fixed~$\alpha$ description of $k$~coincident NS5 branes on transverse~$T^5$ gives $(1,1)$ LST for IIB and $(2,0)$ LST for IIA\@.
+Has AdS/CFT dual with linear dilaton background.
+
 \subsection{Integrable models}
 
 % todo: classical Toda chain
