ALE, ALF, ALG, ALH spaces

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1479,12 +1479,15 @@ K3$/\cyclic{2}$ has a non-trivial canonical bundle.
 
 \paragraph[Gravitational instantons]{A gravitational instanton} is a
 metric with (anti-)self-dual curvature.  A simply-connected Riemannian
-4-manifold is hyperK\"ahler if and only if it is a gravitational instanton.
-% todo: only type of grav inst?
-Compact hK$_4$ are K3 and~$T^4$.  Non-compact hK$_4$ are asymptotically
-locally Euclidean (ALE) spaces asymptotic to $\HH/\Gamma$ for a finite
-subgroup $\Gamma<\Lie{USp}(2)$.  Many such ALE spaces are local resolutions of
-orbifold singularities of K3~surfaces.
+4-manifold is hyperK\"ahler if and only if it is a gravitational
+instanton.  Compact hK$_4$ are K3 and~$T^4$.  Non-compact hK$_4$ are ALE
+(asymptotically locally Euclidean), ALF (asymptotically locally flat),
+ALG, ALH if their volume growth rate is of order $4$, $3$, $2$, $1$.
+ALE spaces are resolutions of $\HH/\Gamma$ for a finite subgroup
+$\Gamma<\Lie{USp}(2)$.  The quotient $\HH/\Gamma$ can appear as a local
+model of an orbifold singularity in a K3~surface.
+
+% https://arxiv.org/pdf/1505.01790
 
 \paragraph{ALE hyperK\"ahler \(4\)-manifolds} $X$ are
 diffeomorphic to the minimal resolution of $\HH/\Gamma$ for some finite
