--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -952,12 +952,12 @@ Background vector multiplet scalars (real/twisted masses) reduce the Higgs and m
 
 \paragraph{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
 
-$\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavor symmetry enhancement.
+$\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavour symmetry enhancement.
 For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\theta$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
 
 \paragraph{4d \(\Nsusy=2\) generalities}
 
-There can be no continuous flavor symmetry enhancement.
+There can be no continuous flavour symmetry enhancement.
 
 % todo: Hitchin system
 
@@ -1010,7 +1010,7 @@ Wilson line in a unitary representation $M=M_0\oplus M_1$ of~$\lie{g}$,
 flavour symmetry group $G_F\subseteq\Lie{U}(V)\times\Lie{U}(M_0)\times\Lie{U}(M_1)$ commuting with~$G$.
 Gauge anomaly cancellation: $M\otimes\det^{1/2}V$ must be a representation of~$G$.
 
-Continuous data: gauge couplings, FI parameters, flavor Wilson line and real mass $v,\sigma\in\lie{g}_F$ that commute, $\lie{g}$-equivariant holomorphic odd map $Q\colon V\to \End M$ with $Q^2=0$ describing how supercharges act on~$M$.
+Continuous data: gauge couplings, FI parameters, flavour Wilson line and real mass $v,\sigma\in\lie{g}_F$ that commute, $\lie{g}$-equivariant holomorphic odd map $Q\colon V\to \End M$ with $Q^2=0$ describing how supercharges act on~$M$.
 
 Special case: Fermi multiplets in representation~$V_{\text{f}}$ of~$G$ with $G$-equivariant holomorphic maps $E\colon V\to V_{\text{f}}$ and $J\colon V\to V_{\text{f}}^{\vee}$ obeying $J\cdot E=0$ are equivalent to Wilson line in $M=\wedge V_{\text{f}}\otimes\det^{-1/2}V_{\text{f}}$ with $Q=E\wedge{}+J\lrcorner{}$.
 
