--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -915,9 +915,13 @@ Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 
 \paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\theta W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\theta[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
 
+\paragraph{An accidental symmetry} is a flavour symmetry of the IR but not of the UV.
+
 \paragraph{R-symmetry mixing.}
-When it is abelian, the IR R-symmetry (that is part of the superconformal algebra) can be a mixture of the UV R-symmetry with abelian flavour symmetries.
-This is fixed in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization, assuming no accidental flavour symmetries.
+The UV R-symmetry can be a mixture of the true IR R-symmetry ($\in$ superconformal algebra) and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
+For nonabelian R-symmetry that flavour symmetry must be accidental: it does not commute with~$R_{\text{UV}}$.
+For abelian R-symmetry the mixing is continuous; assuming no accidental flavour symmetries it is fixed
+in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization.
 
 \paragraph{Classical vacua:} Coulomb, Higgs and mixed branches.
 Coulomb branch ($\lie{g}$~modulo conjugation by~$G$) parametrized by vector multiplet scalars, can be lifted by quantum effects, larger in 3d due to monopoles.
