--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -909,8 +909,8 @@ In 4d, $\theta$ and $g$ combine to $\tau=\theta/(2\pi)+4\pi i/g^2$.
 % \paragraph{FI parameter.} Real for 4d $\Nsusy=1$ or 2d $\Nsusy=(2,2)$.  Triplet for 2d $\Nsusy=(4,4)$, breaks $\Lie{SU}(2)_R$.
 
 \paragraph{Matter.} For $16$~supercharges, none.
-For $8$~supercharges, symplectic representation $V\simeq\HH^n$ namely $G\to\Lie{USp}(2n)$.
-For $4$~supercharges, unitary representation $V\simeq\CC^n$ namely $G\to\Lie{U}(n)$.
+For $8$~supercharges, symplectic representation $V\simeq\HH^n$ namely $G\to F=\Lie{USp}(2n)$.
+For $4$~supercharges, unitary representation $V\simeq\CC^n$ namely $G\to F=\Lie{U}(n)$.
 Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 
 \paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\theta W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\theta[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
@@ -927,8 +927,13 @@ in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremizati
 Coulomb branch ($\lie{g}$~modulo conjugation by~$G$) parametrized by vector multiplet scalars, can be lifted by quantum effects, larger in 3d due to monopoles.
 For $4$~supercharges, Higgs branch parametrized by chiral multiplet scalars: K\"ahler quotient $R//G$.
 For $8$~supercharges, Higgs branch parametrized by hypermultiplet scalars: hyper-K\"ahler quotient $\widetilde{R}///G$.
-The Higgs branch has flavour symmetry $C(G)/Z(G)$ commutant of $G$ in $U(R)$ or $USp(\widetilde{R})$ modulo center of~$G$.
+The Higgs branch has flavour symmetry $\{x\in F\mid xG=Gx\}/G$ normalizer of $G$ in $F=U(R)$ or $F=USp(\widetilde{R})$ modulo~$G$.
 Background vector multiplet scalars (real/twisted masses) reduce the Higgs and mixed branches to fixed points of corresponding flavour symmetries.
+
+\paragraph{Boundaries and gauge redundancies.}
+On a non-compact spacetime one can consider the group of gauge redundancies with various boundary conditions.
+Let $H\subset F$ be the constant transformations included as gauge redundancies (including constant gauge transformations by $H\cap G$).
+The Higgs branch flavour symmetry is then $\{x\in F\mid xG=Gx,xH=Hx\}/H$.
 
 \subsection{Maximal super Yang--Mills}
 
