Clarify when R-symmetry mixing occurs (meaningless in 0d and 1d)

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -918,8 +918,9 @@ Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 \paragraph{An accidental symmetry} is a flavour symmetry of the IR but not of the UV.
 
 \paragraph{R-symmetry mixing.}
-The UV R-symmetry can be a mixture of the true IR R-symmetry ($\in$ superconformal algebra) and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
-For nonabelian R-symmetry that flavour symmetry must be accidental: it does not commute with~$R_{\text{UV}}$.
+In 2d and higher, the superconformal algebra contains the IR R-symmetry.
+The UV R-symmetry can be a mixture of the IR R-symmetry and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
+For nonabelian R-symmetry that flavour symmetry must be accidental as it does not commute with~$R_{\text{UV}}$.
 For abelian R-symmetry the mixing is continuous; assuming no accidental flavour symmetries it is fixed
 in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization.
 
@@ -999,7 +1000,6 @@ Their $\Lie{SU}(2)\times\Lie{SU}(2)$ left/right-moving R-symmetries are differen
 \paragraph{2d \(\Nsusy=(2,2)\).}
 Classical $\Lie{U}(1)\times\Lie{U}(1)$ R-symmetry.
 The axial $\Lie{U}(1)$ R-symmetry has an anomaly with $\Lie{U}(1)$ gauge symmetry proportional to the total charge under that gauge symmetry.
-In any case the R-symmetry is abelian hence may mix with flavour symmetries to give IR R-symmetry.
 
 \paragraph{1d \(\Nsusy=4\)}
 
@@ -1008,7 +1008,7 @@ Data: gauge group~$G$, representation~$V$ of~$G$ for chiral multiplets.
 Gauge couplings, FI parameters, superpotential~$W$.
 Flavour Wilson line, twisted and real masses $v,m_1+im_2,m_3\in\lie{g}_F$ that commute.
 
-R-symmetry: $\Lie{SU}(2)$, times $\Lie{U}(1)$ if $W$~has charge~$2$.  Mixing with flavour symmetries not fixed by superconformal algebra.
+R-symmetry: $\Lie{SU}(2)$, times $\Lie{U}(1)$ if $W$~has charge~$2$.
 
 
 \paragraph{1d \(\Nsusy=2\)}
