A few comments on 2d twisted chirals

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1001,6 +1001,10 @@ Their $\Lie{SU}(2)\times\Lie{SU}(2)$ left/right-moving R-symmetries are differen
 Classical $\Lie{U}(1)\times\Lie{U}(1)$ R-symmetry.
 The axial $\Lie{U}(1)$ R-symmetry has an anomaly with $\Lie{U}(1)$ gauge symmetry proportional to the total charge under that gauge symmetry.
 
+The gauge field strength is a twisted chiral multiplet~$\Sigma$.
+
+Integrating out massive chirals gives a twisted superpotential $-\Tr_R\bigl(\Sigma\log(\Sigma/\mu)-\Sigma\bigr)$ where $\Sigma$ combines gauge field strength and twisted masses.  FI parameters (twisted superpotentials linear in~$\Sigma$) thus run (depend on~$\mu$).
+
 \paragraph{1d \(\Nsusy=4\)}
 
 %% 1407.2567
