--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -981,7 +981,7 @@ Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 
 
 \paragraph{4d \(\Nsusy=2\) \((G,G')\) Argyres--Douglas theories} (with $G$ and~$G'$ among $\Lie{A}_k$, $\Lie{D}_k$, $\Lie{E}_{6,7,8}$) are engineered as IIB strings on three-fold singularity $f_G(x_1,x_2)+f_{G'}(x_3,x_4)=0$ where $f_{A_k}(x,y)=x^2+y^{k+1}$ \etc{} (see \autopageref{page:ADE-polynomial}).
 
-\paragraph{3d \(\Nsusy=4\)} has $\Lie{SU}(2)_C\times\Lie{SU}(2)_H$ R-symmetry acting on the Coulomb and Higgs branch.  Both branches are hyper-K\"ahler and the $\Lie{SU}(2)$ rotates their $\CP^1$ worth of complex structures.  Denote $\Lie{T}\subset\Lie{G}$ the Cartan torus.  The Coulomb branch is a holomorphic Lagrangian fibration $\mathcal{M}_C\to\lie{t}_{\CC}/\Weyl$ with generic fiber $\Lie{T}_{\CC}^{\vee}\simeq(\CC^*)^{\rank\Lie{G}}$.  Its classical $\Hom(\pi_1(\Lie{G}),\Lie{U}(1))$ topological flavour symmetry can be enhanced quantum mechanically.
+\paragraph{3d \(\Nsusy=4\)} has $\Lie{SU}(2)_C\times\Lie{SU}(2)_H$ R-symmetry acting on the Coulomb and Higgs branch.  Both branches are hyper-K\"ahler and the $\Lie{SU}(2)$ rotates their $\CC\PP^1$ worth of complex structures.  Denote $\Lie{T}\subset\Lie{G}$ the Cartan torus.  The Coulomb branch is a holomorphic Lagrangian fibration $\mathcal{M}_C\to\lie{T}_{\CC}/\Weyl$ with generic fiber $\Lie{T}_{\CC}^{\vee}\simeq(\CC^*)^{\rank\Lie{G}}$.  Its classical $\Hom(\pi_1(\Lie{G}),\Lie{U}(1))$ topological flavour symmetry can be enhanced quantum mechanically.
 
 % todo: What is the $\Lie{SU}(2)$ R-symmetry of mixed branches?
 
