--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1003,7 +1003,9 @@ The axial $\Lie{U}(1)$ R-symmetry has an anomaly with $\Lie{U}(1)$ gauge symmetr
 
 The gauge field strength is a twisted chiral multiplet~$\Sigma$.
 
-Integrating out massive chirals gives a twisted superpotential $-\Tr_R\bigl(\Sigma\log(\Sigma/\mu)-\Sigma\bigr)$ where $\Sigma$ combines gauge field strength and twisted masses.  FI parameters (twisted superpotentials linear in~$\Sigma$) thus run (depend on~$\mu$).
+Integrating out massive chirals gives a twisted superpotential $-\Tr_R\bigl(\Sigma\log(\Sigma/\mu)-\Sigma\bigr)$ where $\Sigma$ combines gauge field strength and twisted masses.  FI parameters (twisted superpotentials linear in~$\Sigma$) thus run as $\log(\mu)$ times the sum of charges.
+
+Twisted chiral ring relations: $\partial W/\partial\Sigma_j\in 2\pi\I\ZZ$.
 
 \paragraph{1d \(\Nsusy=4\)}
 
