Riemann zeta and polylog

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -311,6 +311,11 @@ Obeys $\Gamma(z;p,q)=\Gamma(z;q,p)=1/\Gamma(pq/z;p,q)$
 and $\Gamma(pz;p,q)=\theta(z;q)\Gamma(z;p,q)$
 and $\Gamma(z;0,q)=1/(z;q)_\infty$.
 
+\paragraph{Polylogarithm and Riemann zeta}
+$\zeta(s)=\operatorname{Li}_s(1)$ where
+$\operatorname{Li}_s(z)=\sum_{k\geq 1}z^k/k^s=\bigl(1/\Gamma(s)\bigr)\int_0^\infty t^{s-1}\mathrm{d}t/(e^t/z-1)$ obeys
+$\operatorname{Li}_{s+1}(z)=\int_0^z\operatorname{Li}_s(t)\mathrm{d}t/t$ and
+$\operatorname{Li}_1(z)=-\log(1-z)$.
 
 \section[Lie algebras and groups]{Lie algebras and groups (dimension${}<\infty$)}
 
