--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1115,6 +1115,21 @@ where $x\in\RR^{p,1}$ and $y\in\RR^{10-p}$.  In the near horizon $y\to 0$ these 
 
 \paragraph{Branes} IIA strings: D0, F1 (strings), D2, D4, O4$^{\pm}$, $\widetilde{\mathrm{O4}}^+$, NS5, D6, D8 (wall), O8 (wall), \etc{}.  IIB strings: D$(-1)$, F1 (strings), D1, D3, $(p,q)$ 5-branes (includes D5 and NS5), O5$^{\pm}$, $\widetilde{\mathrm{O5}}^+$, D7, O7$^{\pm}$, ON$^0$, \etc{}.  M-theory: M2, M5, OM5, M9.
 
+\paragraph{Flat space brane configurations} Flat space preserves $32$ supercharges.
+One stack of parallel branes breaks half; two stacks break all unless:
+D$p$ and D$q$ have $0$, $4$ or $8$ directions that one brane spans and not the other;
+D$p$ branes have $1$ or $3$ directions transverse to any NS5;
+any pair of NS5 branes has $2$, $4$, $6$ common directions.
+Kappa-projection:
+for D$p$ is $\Gamma_{01\dots p}\epsilon_L=\epsilon_R$,
+for NS5 is $\Gamma_{01\dots 5}\epsilon_L=\epsilon_L$.
+Then at least $32/2^{\#\text{stacks}}$ supercharges preserved.
+
+\paragraph{S-rule, brane creation}
+Let a D$p$ have $3$ directions transverse to an NS5.
+Zero or one D$(p-2)$ can stretch between the two (spanning common directions and directions where neither D$p$ nor NS5 stretch).
+Moving D$p$ through NS5 toggles between zero and one.
+
 \paragraph{Little string theory (LST)}
 Decoupled $g_s\to 0$, fixed~$\alpha$ description of $k$~coincident NS5 branes on transverse~$T^5$ gives $(1,1)$ LST for IIB and $(2,0)$ LST for IIA\@.
 Has AdS/CFT dual with linear dilaton background.
