--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1084,6 +1084,7 @@ We get a $\ZZ\rtimes\ZZ_2$ automorphism group.
 
 \paragraph{Unitary minimal model} $\mathcal{M}_{k+2,k+1}$ is coset $\frac{\hat{\lie{su}}(2)_{k-1}\times\hat{\lie{su}}(2)_1}{\hat{\lie{su}}(2)_k}$
 
+\paragraph{\texorpdfstring{$\mathcal{N}=2$}{N=2} minimal models} have an ADE classification; the $\Lie{A}_k$ has $c/3=1-2/(k+2)$ and is the IR limit of a Landau--Ginzburg model with $W=\Phi^{k+2}$ superpotential.
 
 \subsection{Chern--Simons}
 Chern--Simons $(2m-1)$-form $m\Tr\bigl(A\int_0^1\dd{t}(tdA+t^2A^2)^{m-1}\bigr)$.
