--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1043,6 +1043,14 @@ Flavour Wilson line, twisted and real masses $v,m_1+im_2,m_3\in\lie{g}_F$ that c
 R-symmetry: $\Lie{SU}(2)$, times $\Lie{U}(1)$ if $W$~has charge~$2$.
 
 
+\subsection{Theories with \(2\) supercharges}
+
+\paragraph{3d \(\Nsusy=1\)}
+
+\paragraph{2d \(\Nsusy=(0,2)\)}
+
+\paragraph{2d \(\Nsusy=(1,1)\)}
+
 \paragraph{1d \(\Nsusy=2\)}
 
 %% 1407.2567
@@ -1090,7 +1098,9 @@ We get a $\ZZ\rtimes\ZZ_2$ automorphism group.
 
 \paragraph{\(SW(3/2,2)\) super-Virasoro algebra} has $L$, $G$, $W$, $U$
 
-\paragraph[bc and beta-gamma systems]{$bc$ system, $\beta\gamma$ system}
+\paragraph{\texorpdfstring{$bc$}{bc} system}
+
+\paragraph{\texorpdfstring{$\beta\gamma$}{beta-gamma} system}
 
 \paragraph{Liouville CFT} has $c=1+6(b+1/b)^2$ and primary operators with $h(\alpha)=\alpha(b+1/b-\alpha)$ for ``momentum'' $\alpha\in \frac{1}{2}(b+1/b)+i\RR$.
 
@@ -1164,6 +1174,55 @@ Has AdS/CFT dual with linear dilaton background.
 \subsection{Localization results}
 
 \paragraph{3d \(\Nsusy=2\):} $Z = \int_{\lie{T}} \dd{u} \frac{\prod_{\alpha\,\text{root}} (2\sinh(\alpha u/2))^2}{\prod_{w\in\mathcal{R}}\cosh(wu/2)} \E^{\I k\Tr u^2/(4\pi)}$.
+
+\section{Dualities}
+
+\subsection{Field theory dualities}
+
+2d $\Nsusy=(0,2)$ Gadde--Gukov--Putrov triality (IR).
+
+2d $\Nsusy=(2,2)$ mirror symmetry of Calabi--Yau sigma models (exact).
+
+2d $\Nsusy=(2,2)$ Hori--Tong ($\Lie{SU}$), Hori ($\Lie{Sp}$, $\Lie{SO}$ groups), plus adjoint (ADE-type and $(2,2)^*$-like) dualities (IR).
+
+2d $\Nsusy=(2,2)$ Hori--Vafa/Hori--Kapustin duality of gauged linear sigma models and Landau--Ginzburg models (IR).
+
+3d Chern--Simons level-rank duality.
+
+3d $\Nsusy=2$ Aharony, Giveon--Kutasov, Aharony--Fleischer dualities (IR).
+
+3d $\Nsusy=2$ and $\Nsusy=4$ mirror symmetry exchanging Coulomb and Higgs branches (IR).
+
+4d $\Nsusy=1$ Seiberg, Kutasov--Schwimmer, Brodie, Intriligator--Pouliot, Argyres--Intriligator--Leigh--Strassler, Klebanov cascade, Intriligator--Leigh--Strassler, duality (IR).
+
+S-duality of 4d $\Nsusy=2$ gauge theories (exact).
+
+S-duality of 4d $\Nsusy=4$ SYM (exact).
+
+\subsection{4d \(\Nsusy=1\) dualities}
+
+Seiberg: $\Lie{SU}(N_c)$, $N_f\square$, $N_f\overline{\square}$ $\Leftrightarrow$
+$\Lie{SU}(N_f-N_c)$, $N_f\square$, $N_f\overline{\square}$, $N_f^2$~free, with $W=M\tilde{Q}Q$.
+
+Seiberg: $\Lie{SO}(N_c)$, $N_f\square$ $\Leftrightarrow$
+$\Lie{SO}(N_f-N_c+4)$, $N_f\square$, $\#?$~free, $W=?$
+
+Seiberg: $\Lie{USp}(2N_c)$, $2N_f\square$ $\Leftrightarrow$
+$\Lie{USp}(2N_f-2N_c-4)$, $2N_f\square$, $\#?$~free, $W=?$
+
+These three cases are self-dual when $C(R_{\text{chirals}})=2C(\text{adj})$, namely $N_f=2N_c$, $N_f=2(N_c-2)$ and $N_f=2(N_c+1)$ respectively; adding an adjoint gives $\Nsusy=2$ SCFTs.
+
+\subsection{String theory dualities}
+
+In this table ``type~IIA'' \etc{} refer to string theories not supergravities
+\begin{tab}{l@{ $\Leftrightarrow$ }l}
+  F-theory on K3 & $\Lie{E}_8\times\Lie{E}_8$ heterotic on~$T^2$ \\
+  M-theory on K3 & heterotic or type~I on~$T^3$ \\
+  Type~IIA on K3 & heterotic or type~I on~$T^4$ \\
+  M-theory on $\Lie{G}_2$-manifolds\footnote{Apply K3 duality fiber-wise.} & heterotic or type~I on CY$_3$\\
+  M-theory on K3\footnote{Apparently there is also a similar F-theory/heterotic duality.} & type~IIA on $T^3/\cyclic{2}$\\
+\end{tab}
+% todo: footnotes are lost!
 
 \section{Manifolds}
 
@@ -1421,55 +1480,6 @@ K\"ahler form whose metric is Ricci flat.
 
 % todo \paragraph{Rokhlin's theorem}
 
-
-\section{Dualities}
-
-\subsection{Field theory dualities}
-
-2d $\Nsusy=(0,2)$ Gadde--Gukov--Putrov triality (IR).
-
-2d $\Nsusy=(2,2)$ mirror symmetry of Calabi--Yau sigma models (exact).
-
-2d $\Nsusy=(2,2)$ Hori--Tong ($\Lie{SU}$), Hori ($\Lie{Sp}$, $\Lie{SO}$ groups), plus adjoint (ADE-type and $(2,2)^*$-like) dualities (IR).
-
-2d $\Nsusy=(2,2)$ Hori--Vafa/Hori--Kapustin duality of gauged linear sigma models and Landau--Ginzburg models (IR).
-
-3d Chern--Simons level-rank duality.
-
-3d $\Nsusy=2$ Aharony, Giveon--Kutasov, Aharony--Fleischer dualities (IR).
-
-3d $\Nsusy=2$ and $\Nsusy=4$ mirror symmetry exchanging Coulomb and Higgs branches (IR).
-
-4d $\Nsusy=1$ Seiberg, Kutasov--Schwimmer, Brodie, Intriligator--Pouliot, Argyres--Intriligator--Leigh--Strassler, Klebanov cascade, Intriligator--Leigh--Strassler, duality (IR).
-
-S-duality of 4d $\Nsusy=2$ gauge theories (exact).
-
-S-duality of 4d $\Nsusy=4$ SYM (exact).
-
-\subsection{4d \(\Nsusy=1\) dualities}
-
-Seiberg: $\Lie{SU}(N_c)$, $N_f\square$, $N_f\overline{\square}$ $\Leftrightarrow$
-$\Lie{SU}(N_f-N_c)$, $N_f\square$, $N_f\overline{\square}$, $N_f^2$~free, with $W=M\tilde{Q}Q$.
-
-Seiberg: $\Lie{SO}(N_c)$, $N_f\square$ $\Leftrightarrow$
-$\Lie{SO}(N_f-N_c+4)$, $N_f\square$, $\#?$~free, $W=?$
-
-Seiberg: $\Lie{USp}(2N_c)$, $2N_f\square$ $\Leftrightarrow$
-$\Lie{USp}(2N_f-2N_c-4)$, $2N_f\square$, $\#?$~free, $W=?$
-
-These three cases are self-dual when $C(R_{\text{chirals}})=2C(\text{adj})$, namely $N_f=2N_c$, $N_f=2(N_c-2)$ and $N_f=2(N_c+1)$ respectively; adding an adjoint gives $\Nsusy=2$ SCFTs.
-
-\subsection{String theory dualities}
-
-In this table ``type~IIA'' \etc{} refer to string theories not supergravities
-\begin{tab}{l@{ $\Leftrightarrow$ }l}
-  F-theory on K3 & $\Lie{E}_8\times\Lie{E}_8$ heterotic on~$T^2$ \\
-  M-theory on K3 & heterotic or type~I on~$T^3$ \\
-  Type~IIA on K3 & heterotic or type~I on~$T^4$ \\
-  M-theory on $\Lie{G}_2$-manifolds\footnote{Apply K3 duality fiber-wise.} & heterotic or type~I on CY$_3$\\
-  M-theory on K3\footnote{Apparently there is also a similar F-theory/heterotic duality.} & type~IIA on $T^3/\cyclic{2}$\\
-\end{tab}
-% todo: footnotes are lost!
 
 \section{Misc}
 
