--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1017,6 +1017,16 @@ Their $\Lie{SU}(2)\times\Lie{SU}(2)$ left/right-moving R-symmetries are differen
 
 \subsection{Theories with \(4\) supercharges}
 
+\paragraph{Superspace}
+$\RR^{4|4}\ni(x^m|\theta^\alpha,\overline{\theta}^{\dot{\alpha}})$ in $(2,2)\oplus(2,1)\oplus(1,2)$ of $\lie{so}(1,3)$ or $\lie{so}(4)=\lie{su}(2)^2$.
+Supercharges
+$Q_\alpha=\del_{\theta^\alpha}-i\sigma^m_{\alpha\dot{\alpha}}\overline{\theta}^{\dot{\alpha}}\del_{x^m}$ and
+$\overline{Q}_{\dot{\alpha}}=-\del_{\overline{\theta}^{\dot{\alpha}}}+i\sigma^m_{\alpha\dot{\alpha}}\theta^\alpha\del_{x^m}$
+obey $\{Q_\alpha,\overline{Q}_{\dot{\alpha}}\}=2i\sigma^m_{\alpha\dot{\alpha}}\del_{x^m}$.
+They commute with superderivatives $D_\alpha$ and $\overline{D}_{\dot{\alpha}}$ obtained by $\sigma\leftrightarrow-\sigma$.
+Note $\overline{Q}_{\dot{\alpha}}=e^{-A}\overline{D}_{\dot{\alpha}}e^{A}$ for $A=2i\theta\sigma^m\overline{\theta}\del_{x^m}$;
+likewise $D_\alpha$ is conjugate to $Q_\alpha$.
+
 \paragraph{4d \(\Nsusy=1\) pure SYM} classically has $\Lie{U}(1)_R$ symmetry, broken by instantons to $\ZZ_{2h}$ with $h=C_2(\text{adj})$.  It confines, is mass-gapped, and has $C_2(A)$ vacua associated to breaking $\ZZ_{2h}$ to $\ZZ_2$ by gaugino condensation $\langle\lambda\lambda\rangle$.  Witten index $\Tr(-1)^F=h$.
 
 \paragraph{Wess-Zumino model:} chiral multiplet~$\phi$ with superpotential $W=m\phi^2+g\phi^3$.
