--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -954,7 +954,7 @@ in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremizati
 Coulomb branch ($\lie{g}$~modulo conjugation by~$G$) parametrized by vector multiplet scalars, can be lifted by quantum effects, larger in 3d due to monopoles.
 For $4$~supercharges, Higgs branch parametrized by chiral multiplet scalars: K\"ahler quotient $R//G$.
 For $8$~supercharges, Higgs branch parametrized by hypermultiplet scalars: hyper-K\"ahler quotient $\widetilde{R}///G$.
-The Higgs branch has flavour symmetry $\{x\in F\mid xG=Gx\}/G$ normalizer of $G$ in $F=U(R)$ or $F=USp(\widetilde{R})$ modulo~$G$.
+The Higgs branch has flavour symmetry $\{x\in F\mid xG=Gx\}/G$ normalizer of $G$ in $F=\Lie{U}(R)$ or $F=\Lie{USp}(\widetilde{R})$ modulo~$G$.
 Background vector multiplet scalars (real/twisted masses) reduce the Higgs and mixed branches to fixed points of corresponding flavour symmetries.
 
 \paragraph{Boundaries and gauge redundancies.}
