--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1187,6 +1187,22 @@ Has AdS/CFT dual with linear dilaton background.
 
 \section{Dualities}
 
+\subsection{4d $\Nsusy=1$ dualities}
+
+\paragraph{\texorpdfstring{$\Lie{SU}(K)$ with $N\square+N\overline{\square}$}{SU(K) with N flavours}} chiral multiplets (``electric theory'')
+is dual (Seiberg duality) to $\Lie{SU}(N-K)$ with $N\square+N\overline{\square}$ and $N^2$ gauge-invariant chiral multiplets $Q_\alpha$, $\widetilde{Q}_\beta$, $M^{\alpha\beta}$ with superpotential $W=\Tr\widetilde{Q}QM$ (``magnetic theory'').  RG flow:
+\begin{itemize}\setlength{\itemsep}{0pt}
+\item for $2\leq K\leq N/3$ the original theory is IR-free;
+\item for $N/3<K<2N/3$ flow to SCFT;
+\item for $2N/3\leq K\leq N-2$ the dual theory is IR-free.
+\end{itemize}
+
+% \paragraph{\texorpdfstring{$\Lie{SO}(K)$ with $N\square+N\overline{\square}$}{SO(K) with N flavours}} is dual to $\Lie{SO}(N-K+4)$ with $N\square+N\overline{\square}$ and extra neutral coupled by cubic~$W$
+% Check if both fundamental and antifundamental!
+
+% \paragraph{\texorpdfstring{$\Lie{USp}(2K)$ with $2N\square+2N\overline{\square}$}{USp(2K) with 2N flavours}} is dual to $\Lie{USp}(2N-2K-4)$ with $2N\square+2N\overline{\square}$ and extra neutral coupled by cubic~$W$
+% Check if both fundamental and antifundamental!
+
 \subsection{Field theory dualities}
 
 2d $\Nsusy=(0,2)$ Gadde--Gukov--Putrov triality (IR).
