Comment that 10d type I sugra is anomalous

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1188,7 +1188,7 @@ Polyakov action $L_{\text{P}}=\lambda^{mn}[(\partial_m X)(\partial_n X)-g_{mn}]+
 $d$ &$Q=32$& $16$  &$8$  & $4$  \\ \midrule
 11& \checkmark & &&  \\
 10& $\stackrel{ IIB}{(2,0)}\ \stackrel{ IIA}{(1,1)}$ &
-$\stackrel{I}{(1,0)}$
+$\stackrel{I}{(1,0)}$\tabfoot{1}
 & & \\
 9 & \checkmark & \checkmark &&\\
 8 & \checkmark & \checkmark &&\\
@@ -1199,6 +1199,9 @@ $(1,0)$ &\\
 4 &$N=8$ &$N=4$ & $N=2$
 &$N=1$\\
 \end{tab}
+
+\tabfoot{1} 10d $(1,0)$ supergravity (``type I'') has a \href{http://inspirehep.net/record/192309}{gravitational anomaly}.
+(Perhaps 6d $(2,0)$ or $(1,0)$ supergravity too?)
 
 \paragraph{M-theory} has as its low-energy limit 11d supergravity, which has two $\frac{1}{2}$-BPS membrane solutions (with $16$~Killing spinors):
 M2-brane $\dd{s}^2=\Lambda^4\dd{x}^2+\frac{\dd{y}^2}{\Lambda^2}$ with $\Lambda=(1+\frac{c_2N_2l^6}{\abs{y}^6})^{-1/6}$, and
