Clarify table of maximal compact subgroups

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -425,49 +425,50 @@ $\lie{su}^*(2n)=\lie{sl}(n,\HH)=\{\Re\Tr M=0\text{ in }\lie{gl}(n,\HH)\}\simeq\l
 $\lie{so}^*(2n)=\lie{o}(n,\HH)$.
 A Lie algebra is called compact if it exponentiates to a compact Lie group.
 In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})$ generators.
-\begin{tab}{@{}c@{ }lll}
-& Real form & \hspace{-1em}Max compact subalgebra & Range \\
+The maximal compact subalgebra of a complex algebra is its compact real form.
+\begin{tab}{@{}c@{ }l@{\,}l@{ \ }l}
+& Real form & Max compact subalgebra & Range \\
 \midrule
 \multirow{4}{*}{\rotatebox{90}{$\lie{sl}(n,\CC)$}}
 & $\lie{su}(n)$ & compact & \\
-& $\lie{sl}(n,\RR)$ & $\lie{so}(n)$ & \\
-& $\lie{su}(n-p,p)$ & $\lie{su}(n-p)\oplus \lie{su}(p)\oplus \lie{u}(1)$ & $0<p<n$ \\
-& $\lie{su}^*(n)$ & $\lie{usp}(n)$ & $n$ even \\
+& $\lie{sl}(n,\RR)$ & $\supset\lie{so}(n)$ & \\
+& $\lie{su}(n-p,p)$ & $\supset\lie{su}(n-p)\oplus \lie{su}(p)\oplus \lie{u}(1)$ & $0<p<n$ \\
+& $\lie{su}^*(n)$ & $\supset\lie{usp}(n)$ & $n$ even \\
 \midrule
 \multirow{3}{*}{\rotatebox{90}{$\lie{so}(n,\CC)$}}
 & $\lie{so}(n)$& compact & \\
-& $\lie{so}(p,n-p)$& $\lie{so}(p)\oplus \lie{so}(n-p)$ & $0<p<n$ \\
-& $\lie{so}^*(n)$   & $\lie{u}(n/2)$ & $n$ even \\
+& $\lie{so}(p,n-p)$& $\supset\lie{so}(p)\oplus \lie{so}(n-p)$ & $0<p<n$ \\
+& $\lie{so}^*(n)$   & $\supset\lie{u}(n/2)$ & $n$ even \\
 \midrule
 \multirow{3}{*}{\rotatebox{90}{$\lie{sp}(2n,\CC)\!\!$}}
 & $\lie{usp}(2n)$ & compact & \\
-& $\lie{sp}(2n,\RR)$  & $\lie{u}(n)$ & \\
-& $\lie{usp}(2n-2p,2p)$ & $\lie{usp}(2n-2p)\oplus \lie{usp}(2p)$ & $0<p<n$ \\
+& $\lie{sp}(2n,\RR)$  & $\supset\lie{u}(n)$ & \\
+& $\lie{usp}(2n-2p,2p)$ & $\supset\lie{usp}(2n-2p)\oplus \lie{usp}(2p)$ & $0<p<n$ \\
 \midrule
 \multicolumn{4}{c}{%
-  \begin{tabular}[c]{ll}
+  \begin{tabular}[c]{l@{ }l}
   $\lie{E}_{6(-78)}$ & compact \\
-  $\lie{E}_{6(-26)}$ & $\lie{F}_4$ \\
-  $\lie{E}_{6(-14)}$ & $\lie{so}(10)\oplus \lie{so}(2)$\\
-  $\lie{E}_{6(2)}$ & $\lie{su}(6)\oplus \lie{su}(2)$\\
-  $\lie{E}_{6(6)}$ & $\lie{usp}(8)$\\
+  $\lie{E}_{6(-26)}$ & $\supset\lie{F}_4$ \\
+  $\lie{E}_{6(-14)}$ & $\supset\lie{so}(10)\oplus \lie{so}(2)$\\
+  $\lie{E}_{6(2)}$ & $\supset\lie{su}(6)\oplus \lie{su}(2)$\\
+  $\lie{E}_{6(6)}$ & $\supset\lie{usp}(8)$\\
   \midrule
   $\lie{E}_{7(-133)}$& compact \\
-  $\lie{E}_{7(-25)}$& $\lie{E}_6\oplus \lie{so}(2)$ \\
-  $\lie{E}_{7(-5)}$& $\lie{so}(12)\oplus \lie{su}(2)$ \\
-  $\lie{E}_{7(7)}$& $\lie{su}(8)$
+  $\lie{E}_{7(-25)}$& $\supset\lie{E}_6\oplus \lie{so}(2)$ \\
+  $\lie{E}_{7(-5)}$& $\supset\lie{so}(12)\oplus \lie{su}(2)$ \\
+  $\lie{E}_{7(7)}$& $\supset\lie{su}(8)$
   \end{tabular}\quad
-  \begin{tabular}[c]{ll}
+  \begin{tabular}[c]{l@{\,}l}
   $\lie{E}_{8(-248)}$& compact\\
-  $\lie{E}_{8(-24)}$&$\lie{E}_7\oplus \lie{su}(2)$\\
-  $\lie{E}_{8(8)}$&$\lie{so}(16)$\\
+  $\lie{E}_{8(-24)}$&$\supset\lie{E}_7\oplus \lie{su}(2)$\\
+  $\lie{E}_{8(8)}$&$\supset\lie{so}(16)$\\
   \midrule
   $\lie{G}_{2(-14)}$ & compact \\
-  $\lie{G}_{2(2)}$ & $\lie{su}(2)\oplus \lie{su}(2)$ \\
+  $\lie{G}_{2(2)}$ & $\supset\lie{su}(2)\oplus \lie{su}(2)$ \\
   \midrule
   $\lie{F}_{4(-52)}$ & compact \\
-  $\lie{F}_{4(-20)}$ & $\lie{so}(9)$ \\
-  $\lie{F}_{4(4)}$ & $\lie{usp}(6)\oplus \lie{su}(2)$ \\
+  $\lie{F}_{4(-20)}$ & $\supset\lie{so}(9)$ \\
+  $\lie{F}_{4(4)}$ & $\supset\lie{usp}(6)\oplus \lie{su}(2)$ \\
   \end{tabular}
 }\\
 \end{tab}
