On the 4d N=1 supercurrent multiplet

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1003,6 +1003,17 @@ in 2d $\Nsusy=(2,2)$ also twisted vector, twisted chirals, semichirals, \ldots{}
 
 6d $\Nsusy=(1,0)$ supergravity multiplet, reduces to 4d $\Nsusy=2$ supergravity multiplet and two vectors.
 
+\paragraph{4d \(\Nsusy=1\) supercurrent multiplet}
+contains stress tensor and/or R-symmetry current; is a source for supergravity.
+Ferrara--Zumino supercurrent $\overline{D}^{\dot{\alpha}}J_{\alpha\dot{\alpha}}=D_\alpha X$ with $\overline{D}_{\dot{\alpha}}X=0$ contains stress tensor; sources old minimal supergravity.
+R-symmetry multiplet $\overline{D}^{\dot{\alpha}}R_{\alpha\dot{\alpha}}=\chi_\alpha$,
+$\overline{D}_{\dot{\alpha}}\chi_\alpha=0$, $D^\alpha\chi_\alpha=\overline{D}_{\dot{\alpha}}\overline{\chi}^{\dot{\alpha}}$
+contains (conserved) R-symmetry current; sources new minimal supergravity.
+Komargodski--Seiberg multiplet \href{https://arxiv.org/abs/1002.2228}{[1002.2228]}
+$\overline{D}^{\dot{\alpha}}S_{\alpha\dot{\alpha}}=\chi_\alpha+D_\alpha X$, with $\chi_\alpha$ and $X$ as above,
+contains both stress tensor and R-symmetry current and sources 16/16 supergravity.
+
+
 
 \section{Supersymmetric gauge theories}
 
