--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -193,7 +193,7 @@
 \newcommand{\etc}{etc.\@ifnextchar.{\@gobble}{\@}}
 \makeatother
 \newcommand{\I}{\mathrm{i}}
-\newcommand{\E}{\mathrm{e}}
+\newcommand{\rme}{\mathrm{e}}
 \newcommand{\Wedge}{\bigwedge}
 \newcommand{\del}{\partial}
 \newcommand{\delbar}{\overline{\partial}}
@@ -226,6 +226,9 @@
 \newcommand{\pullback}[2]{#1^*#2}
 \newcommand{\bundle}{\mathcal}
 \newcommand{\Nf}{N_f}
+\newcommand{\thetafunction}{\theta}
+\newcommand{\thetaangle}{\theta}
+\newcommand{\thetacoordinate}{\theta}
 
 \ExplSyntaxOn
 \NewDocumentCommand{\Lie}{m}{
@@ -314,11 +317,11 @@ It has simple poles at $x\in\ZZ_{\leq 0}$ and no zero.
 
 \paragraph{Modular form} of weight $k$: holomorphic on $\mathbf{H}=\{\Im\tau>0\}$ and as $\tau\to\I\infty$ and obeys $f(\frac{a\tau+b}{c\tau+d})=(c\tau+d)^kf(\tau)$.
 
-\paragraph{Dedekind eta function:} $\eta(\tau)=q^{1/24}(q;q)_\infty$ for $q=\E^{2\pi\I\tau}$. $\Delta=\eta^{24}$ is a modular form of weight~$12$.
+\paragraph{Dedekind eta function:} $\eta(\tau)=q^{1/24}(q;q)_\infty$ for $q=\rme^{2\pi\I\tau}$. $\Delta=\eta^{24}$ is a modular form of weight~$12$.
 
-\paragraph{Theta functions:} q-theta $\theta(z;q)=(z;q)_\infty(q/z;q)_\infty$ obeys $\theta(z;q)=\theta(q/z;q)=-z\theta(1/z;q)$.
-Variant $\theta_1(z;q)=\theta_1(\tau|u)=\I z^{-1/2}q^{1/12}\eta(\tau)\theta(z;q)=-\I z^{1/2}q^{1/8}(q;q)_\infty(qz;q)_\infty(\frac{1}{z};q)_\infty$
-with $z=\E^{2\pi\I u}$.
+\paragraph{Theta functions:} q-theta $\thetafunction(z;q)=(z;q)_\infty(q/z;q)_\infty$ obeys $\thetafunction(z;q)=\thetafunction(q/z;q)=-z\thetafunction(1/z;q)$.
+Variant $\thetafunction_1(z;q)=\thetafunction_1(\tau|u)=\I z^{-1/2}q^{1/12}\eta(\tau)\thetafunction(z;q)=-\I z^{1/2}q^{1/8}(q;q)_\infty(qz;q)_\infty(\frac{1}{z};q)_\infty$
+with $z=\rme^{2\pi\I u}$.
 
 \paragraph{Eisenstein series} ($k\geq 1$) $E_{2k}=1+\frac{2}{\zeta(1-2k)}\sum_{n=1}^{\infty}n^{2k-1}\frac{q^n}{1-q^n}$ obeys
 $E_{2k}(\frac{a\tau+b}{c\tau+d})=(c\tau+d)^{2k}E_{2k}(\tau)+\frac{6}{\pi\I}c(c\tau+d)\delta_{k=1}$.
@@ -327,12 +330,12 @@ For $k\geq 2$ it is a modular form and $E_{2k}=\frac{1}{2\zeta(2k)}\sum_{0\neq\l
 \paragraph{Elliptic gamma function}
 $\Gamma(z;p,q)=\plexp\frac{z-pq/z}{(1-p)(1-q)}=\prod_{m=0}^{\infty}\prod_{n=0}^{\infty}(1-p^{m+1}q^{m+1}z^{-1})/(1-p^mq^nz)$.
 Obeys $\Gamma(z;p,q)=\Gamma(z;q,p)=1/\Gamma(pq/z;p,q)$
-and $\Gamma(pz;p,q)=\theta(z;q)\Gamma(z;p,q)$
+and $\Gamma(pz;p,q)=\thetafunction(z;q)\Gamma(z;p,q)$
 and $\Gamma(z;0,q)=1/(z;q)_\infty$.
 
 \paragraph{Polylogarithm and Riemann zeta}
 $\zeta(s)=\Li_s(1)$ where
-$\Li_s(z)=\sum_{k\geq 1}z^k/k^s=\bigl(1/\Gamma(s)\bigr)\int_0^\infty t^{s-1}\mathrm{d}t/(e^t/z-1)$ obeys
+$\Li_s(z)=\sum_{k\geq 1}z^k/k^s=\bigl(1/\Gamma(s)\bigr)\int_0^\infty t^{s-1}\mathrm{d}t/(\rme^t/z-1)$ obeys
 $\Li_{s+1}(z)=\int_0^z\Li_s(t)\mathrm{d}t/t$ and
 $\Li_1(z)=-\log(1-z)$.
 The dilogarithm obeys
@@ -413,10 +416,10 @@ The $2^7\,3^4\,5=51840$-element Weyl group is $\operatorname{Aut}(\Lie{PSp}_4(\F
 simple roots $\one_1-\one_2$, $\one_2-\one_3$, $\one_3$, $-\frac{1}{2}(\one_1+\one_2+\one_3+\one_4)$.
 It has an $1152$-element Weyl group and $\{d_i\}=\{2,6,8,12\}$.
 
-\item[$\lie{G}_2$:] $12$~roots $\E^{2\pi\I k/6},\E^{2\pi\I (2k+1)/12}\sqrt{3}\in\CC$ for $0\leq k< 6$, simple roots~$1$ and $\E^{5\pi\I/6}\sqrt{3}$.
+\item[$\lie{G}_2$:] $12$~roots $\rme^{2\pi\I k/6},\rme^{2\pi\I (2k+1)/12}\sqrt{3}\in\CC$ for $0\leq k< 6$, simple roots~$1$ and $\rme^{5\pi\I/6}\sqrt{3}$.
 The $12$-element Weyl group is the dihedral group~$D_6$, and $\{d_i\}=\{2,6\}$.
 \end{description}
-The Coxeter number $h(\lie{G})=(\dim\lie{G}/\rank\lie{G})-1$ is the largest~$d_i$.  A Coxeter element is the product of all simple reflections, in any order.  Its eigenvalues $\E^{2\pi\I(d_i-1)/h}$ come in conjugate pairs.
+The Coxeter number $h(\lie{G})=(\dim\lie{G}/\rank\lie{G})-1$ is the largest~$d_i$.  A Coxeter element is the product of all simple reflections, in any order.  Its eigenvalues $\rme^{2\pi\I(d_i-1)/h}$ come in conjugate pairs.
 
 \paragraph[Real simple Lie algebras]{A real simple Lie algebra} is a complex algebra (see above) or a real form of it.
 Let
@@ -695,7 +698,7 @@ The factor $\CC$ of $\lie{sl}(m|n)$ must be removed if $m=n$.
 \begin{tab}{lll}
 & Bosonic algebra & Fermionic repr. \\\midrule
 $\lie{sl}(m|n)$ & $\lie{sl}(m,\CC)\oplus \lie{sl}(n,\CC)\oplus\CC$ & $(m,\overline{n})\oplus(\overline{m},n)$ \\
-$\lie{osp}(m|2n)$ & $\lie{so}(m,\CC) \oplus \lie{sp}(2n,\RR)$ & $(m,2n)$ \\
+$\lie{osp}(m|2n)$ & $\lie{so}(m,\CC) \oplus \lie{sp}(2n,\CC)$ & $(m,2n)$ \\
 $\lie{D}(2,1,\alpha)$ & $\lie{sl}(2,\CC)^3$ & $(2,2,2)$ \\
 $\lie{F}(4)$ & $\lie{so}(7,\CC)\oplus \lie{sl}(2,\CC)$ & $(8,2)$ \\
 $\lie{G}(3)$ & $\lie{G}_2\oplus \lie{sl}(2,\CC)$ & $(7,2)$ \\
@@ -987,7 +990,7 @@ $0 = \{Q_\alpha,Q_\beta\} =
 \paragraph{For \(16\) supercharges}, there is only the vector multiplet.
 
 \paragraph{For \(8\) supercharges}, vector multiplet and hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
-% todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\theta}F(\Phi)$
+% todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\thetacoordinate}F(\Phi)$
 
 \paragraph{For \(4\) supercharges}, vector ($V=V^\dagger$) and chiral ($\overline{D}_{\dot{\alpha}}X=0$) multiplets;
 in 3d $\Nsusy=2$ also linear multiplets ($\epsilon^{\alpha\beta} D_\alpha D_\beta\Sigma=0=\epsilon^{\alpha\beta}\overline{D}_\alpha\overline{D}_\beta\Sigma$);
@@ -1022,8 +1025,8 @@ contains both stress tensor and R-symmetry current and sources 16/16 supergravit
 \paragraph{Super Yang--Mills (SYM).} A gauge group is a compact reductive Lie group~$G$ such as $(\Lie{SU}(3)\times\Lie{SU}(2)\times\Lie{U}(1))/\ZZ_6$.
 The SYM term is $\mathcal{L}_{\text{SYM}}=g^{-2}\Tr F\wedge\star F+\text{superpartners}$, with one real gauge coupling~$g$ per simple factor.
 
-\paragraph{Theta term} in even dimension: $\theta\Tr F^{\wedge(d/2)}$ with~$\theta$ periodic.
-In 4d, $\theta$ and $g$ combine to $\tau=\theta/(2\pi)+4\pi i/g^2$.
+\paragraph{Theta term} in even dimension: $\thetaangle\Tr F^{\wedge(d/2)}$ with~$\thetaangle$ periodic.
+In 4d, $\thetaangle$ and $g$ combine to $\tau=\thetaangle/(2\pi)+4\pi i/g^2$.
 
 \paragraph{Chern--Simons term} in 3d: $k\Tr\bigl(A\wedge\dd{A}+\frac{2}{3}A\wedge A\wedge A\bigr)$ with $k$~quantized (normalization missing).
 
@@ -1034,18 +1037,18 @@ For $8$~supercharges, symplectic representation $V\simeq\HH^n$ namely $G\to F=\L
 For $4$~supercharges, unitary representation $V\simeq\CC^n$ namely $G\to F=\Lie{U}(n)$.
 Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 
-\paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\theta W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\theta[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
+\paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\thetacoordinate W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\thetacoordinate[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
 
 \paragraph{An accidental symmetry} is a flavour symmetry of the IR but not of the UV.
 
 \paragraph{R-symmetry.}
-In 2d and higher, the superconformal algebra contains the IR R-symmetry.
-The UV R-symmetry can be a mixture of the IR R-symmetry and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
+In 2d and higher the IR R-symmetry is part of the superconformal algebra, rather than an outer automorphism of it.
+The manifest (UV) R-symmetry can be a mixture of the IR R-symmetry and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
 For nonabelian R-symmetry that flavour symmetry must be accidental as it does not commute with~$R_{\text{UV}}$.
 For abelian R-symmetry the mixing is continuous; assuming no accidental flavour symmetries it is fixed
 in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization.
 
-The vector multiplet scalars and gauge field are $U(1)_R$ neutral.
+Vector multiplet scalars and gauge field are $U(1)_R$ neutral.
 
 For chirals, $\Delta\geq\frac{1}{2}(d-1)\abs{R}$ at the fixed point.
 
@@ -1081,14 +1084,14 @@ The Higgs branch flavour symmetry is then $\{x\in F\mid xG=Gx,xH=Hx\}/H$.
 \end{tab}
 % todo: discrete R-symmetries?
 
-\paragraph{4d \(\Nsusy=4\)} has exactly marginal parameter $\tau=\theta/(2\pi)+4\pi i/g^2$.
+\paragraph{4d \(\Nsusy=4\)} has exactly marginal parameter $\tau=\thetaangle/(2\pi)+4\pi i/g^2$.
 
 \subsection{Theories with \(8\) supercharges}
 
 \paragraph{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
 
 $\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavour symmetry enhancement.
-For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\theta$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
+For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\thetaangle$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
 
 \paragraph{4d \(\Nsusy=2\) generalities}
 
@@ -1117,18 +1120,18 @@ Their $\Lie{SU}(2)\times\Lie{SU}(2)$ left/right-moving R-symmetries are differen
 \subsection{Theories with \(4\) supercharges}
 
 \paragraph{Superspace}
-$\RR^{4|4}\ni(x^m|\theta^\alpha,\overline{\theta}^{\dot{\alpha}})$ in $(2,2)\oplus(2,1)\oplus(1,2)$ of $\lie{so}(1,3)$ or $\lie{so}(4)=\lie{su}(2)^2$.
+$\RR^{4|4}\ni(x^m|\thetacoordinate^\alpha,\overline{\thetacoordinate}^{\dot{\alpha}})$ in $(2,2)\oplus(2,1)\oplus(1,2)$ of $\lie{so}(1,3)$ or $\lie{so}(4)=\lie{su}(2)^2$.
 Supercharges
-$Q_\alpha=\del_{\theta^\alpha}-i\sigma^m_{\alpha\dot{\alpha}}\overline{\theta}^{\dot{\alpha}}\del_{x^m}$ and
-$\overline{Q}_{\dot{\alpha}}=-\del_{\overline{\theta}^{\dot{\alpha}}}+i\sigma^m_{\alpha\dot{\alpha}}\theta^\alpha\del_{x^m}$
+$Q_\alpha=\del_{\thetacoordinate^\alpha}-i\sigma^m_{\alpha\dot{\alpha}}\overline{\thetacoordinate}^{\dot{\alpha}}\del_{x^m}$ and
+$\overline{Q}_{\dot{\alpha}}=-\del_{\overline{\thetacoordinate}^{\dot{\alpha}}}+i\sigma^m_{\alpha\dot{\alpha}}\thetacoordinate^\alpha\del_{x^m}$
 obey $\{Q_\alpha,\overline{Q}_{\dot{\alpha}}\}=2i\sigma^m_{\alpha\dot{\alpha}}\del_{x^m}$.
 They commute with superderivatives $D_\alpha$ and $\overline{D}_{\dot{\alpha}}$ obtained by $\sigma\leftrightarrow-\sigma$.
-Note $\overline{Q}_{\dot{\alpha}}=e^{-A}\overline{D}_{\dot{\alpha}}e^{A}$ for $A=2i\theta\sigma^m\overline{\theta}\del_{x^m}$;
+Note $\overline{Q}_{\dot{\alpha}}=\rme^{-A}\overline{D}_{\dot{\alpha}}\rme^{A}$ for $A=2i\thetacoordinate\sigma^m\overline{\thetacoordinate}\del_{x^m}$;
 likewise $D_\alpha$ is conjugate to $Q_\alpha$.
 
 \paragraph{4d \(\Nsusy=1\) pure SYM} classically has $\Lie{U}(1)_R$ symmetry, broken by instantons to $\ZZ_{2h}$ with $h=C_2(\text{adj})$.  It confines, is mass-gapped, and has $C_2(A)$ vacua associated to breaking $\ZZ_{2h}$ to $\ZZ_2$ by gaugino condensation $\langle\lambda\lambda\rangle$.  Witten index $\Tr(-1)^F=h$.
 
-Field strength $W_\alpha=-\frac{1}{4}\overline{D}\overline{D}e^{-V}D_\alpha e^V$ and $\overline{W}_\alpha=-\frac{1}{4}DDe^{-V}\overline{D}_\alpha e^V$.
+Field strength $W_\alpha=-\frac{1}{4}\overline{D}\overline{D}\rme^{-V}D_\alpha \rme^V$ and $\overline{W}_\alpha=-\frac{1}{4}DD\rme^{-V}\overline{D}_\alpha \rme^V$.
 
 \paragraph{Wess-Zumino model:} chiral multiplet~$\phi$ with superpotential $W=m\phi^2+g\phi^3$.
 
@@ -1287,13 +1290,13 @@ Has AdS/CFT dual with linear dilaton background.
 
 % todo: quantum Toda chain
 
-\paragraph{Relativistic quantum Toda chain.} $H = \sum_{n=1}^N \bigl(\cos(2\eta\hat{p}_n)+g^2\cos(\eta\hat{p}_n+\eta\hat{p}_{n+1})\E^{x_{n+1}-x_n}\bigr)$.  Its non-relativistic limit is $\eta\to 0$ imaginary with $g/(i\eta\sqrt{2})=c$ fixed.
+\paragraph{Relativistic quantum Toda chain.} $H = \sum_{n=1}^N \bigl(\cos(2\eta\hat{p}_n)+g^2\cos(\eta\hat{p}_n+\eta\hat{p}_{n+1})\rme^{x_{n+1}-x_n}\bigr)$.  Its non-relativistic limit is $\eta\to 0$ imaginary with $g/(i\eta\sqrt{2})=c$ fixed.
 % http://arxiv.org/abs/1609.07385 ``Exact solution of the relativistic quantum Toda chain''
 
 
 \subsection{Localization results}
 
-\paragraph{3d \(\Nsusy=2\):} $Z = \int_{\lie{T}} \dd{u} \frac{\prod_{\alpha\,\text{root}} (2\sinh(\alpha u/2))^2}{\prod_{w\in\mathcal{R}}\cosh(wu/2)} \E^{\I k\Tr u^2/(4\pi)}$.
+\paragraph{3d \(\Nsusy=2\):} $Z = \int_{\lie{T}} \dd{u} \frac{\prod_{\alpha\,\text{root}} (2\sinh(\alpha u/2))^2}{\prod_{w\in\mathcal{R}}\cosh(wu/2)} \rme^{\I k\Tr u^2/(4\pi)}$.
 
 \section{Dualities}
 
@@ -1544,7 +1547,7 @@ In contrast, quaternionic-K\"ahler manifolds are not K\"ahler.
 % $\Lie{G}_2\subset \Lie{SO}(7)$.  Equivalently it is a Riemannian $7$-manifold
 % with holonomy group~$\subseteq\Lie{G}_2$.
 %
-% Example: Aloff--Wallach space $X_{k,l}=\Lie{SU}(3)/\Lie{U}(1)_{k,l}$ where $\Lie{U}(1)\contains\E^{\I\theta}\mapsto\diag(\E^{\I k\theta},\E^{\I l\theta},\E^{\I(-k-l)\theta})\in\Lie{SU}(3)$ have many $\lie{G}_2$-structures.
+% Example: Aloff--Wallach space $X_{k,l}=\Lie{SU}(3)/\Lie{U}(1)_{k,l}$ where $\Lie{U}(1)\contains\rme^{\I\theta}\mapsto\diag(\rme^{\I k\theta},\rme^{\I l\theta},\rme^{\I(-k-l)\theta})\in\Lie{SU}(3)$ have many $\lie{G}_2$-structures.
 
 A \href{http://en.wikipedia.org/wiki/Calabi-Yau_manifold}{Calabi--Yau
   manifold} is a K\"ahler manifold such that (equivalently) some
